添加挂起状态

--- a/FGPopupSchedulerDemo/FGPopupSchedulerDemo/Base.lproj/Main.storyboard
+++ b/FGPopupSchedulerDemo/FGPopupSchedulerDemo/Base.lproj/Main.storyboard
@@ -16,20 +16,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LfC-KN-dNC">
-                                <rect key="frame" x="35" y="163" width="233" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="registerFirstPopupViewResponder">
-                                    <color key="titleColor" systemColor="labelColor"/>
-                                </state>
-                                <connections>
-                                    <action selector="register:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CFq-ks-cSk"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hR-H5-GSy">
-                                <rect key="frame" x="35" y="293" width="46" height="30"/>
+                                <rect key="frame" x="159" y="121" width="77" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="下一页">
+                                <state key="normal" title="跳转下一页">
                                     <color key="titleColor" systemColor="labelColor"/>
                                 </state>
                                 <connections>
